--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@
   text-decoration: none;
   list-style: none;
   -webkit-tap-highlight-color: transparent !important;
+  -webkit-user-select: none; /* Safari, Chrome, Edge */
+  -moz-user-select: none;    /* Firefox */
+  -ms-user-select: none;     /* IE 10+ */
+  user-select: none;
 }
 body{
   max-width: 2000px;
